# rrrie-cdss-clean-temizlenmi-

./: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  SETUP.bat  pyproject.toml  requirements.txt  run.bat  run.py
config/: adjustment_policy.json  api_config.py  clinical_thresholds.json  medical_synonyms.json  settings.py  user_preferences.py  verification_profiles.json
data/: settings.toml
docs/: anti_hardcoding.md  architecture.md  evaluation.md  frontend-design-research.md  limitations.md  safety.md  upgrade_report_2026-05.md
gui/: __main__.py  server.py  typed_delta.py
scripts/: build_syndrome_registry.py  check_complexity.py  code_audit_utils.py  generate_file_audit_matrix.py  run_eval.py  secret_scan.py
setup/: common.ps1  export_portable.ps1  install.ps1  models_urls.txt  start.ps1  verify_installation.py
src/: __init__.py
tests/: benchmark_cdss_cases.py  benchmark_suite_fresh50.json  benchmark_suite_gold10.json  benchmark_suite_stress26.json  cdss_test_support.py  conftest.py  test_adaptive_depth_gate.py  test_agentic_tool_runtime.py  test_benchmark_suite_fresh50.py  test_bradley_terry.py  test_canonical_state_mainline.py  test_cdss_ontology_resolver.py  test_cdss_pediatric_airway_policy.py  test_cdss_pubmed_edge_cases.py  test_challenger_parsers.py  test_counterfactual_ablation.py  test_diagnostic_contract.py  test_diagnostic_contract_loader.py  test_eval_metrics.py  test_evidence_starvation.py  test_gui_static_contract.py  test_inline_grounding.py  test_intracranial_taxonomy.py  test_label_validation.py  test_llama_cpp_client_reasoning.py  (+11 more)
(+115 files in other folders)
